fix: Remove enable-preview option.